/**
Copyright LAGAGE Frédéric ,2011
flagage@gmail.com

Ce logiciel est un programme informatique servant à capturer en direct des statistiques des joueurs de volley-ball.

Ce logiciel est régi par la licence CeCILLsoumise au droit français et
respectant les principes de diffusion des logiciels libres. Vous pouvez
utiliser, modifier et/ou redistribuer ce programme sous les conditions
de la licence CeCILL telle que diffusée par le CEA, le CNRS et l'INRIA
sur le site "http://www.cecill.info".

En contrepartie de l'accessibilité au code source et des droits de copie,
de modification et de redistribution accordés par cette licence, il n'est
offert aux utilisateurs qu'une garantie limitée.  Pour les mêmes raisons,
seule une responsabilité restreinte pèse sur l'auteur du programme,  le
titulaire des droits patrimoniaux et les concédants successifs.

A cet égard  l'attention de l'utilisateur est attirée sur les risques
associés au chargement,  à l'utilisation,  à la modification et/ou au
développement et à la reproduction du logiciel par l'utilisateur étant
donné sa spécificité de logiciel libre, qui peut le rendre complexe à
manipuler et qui le réserve donc à des développeurs et des professionnels
avertis possédant  des  connaissances  informatiques approfondies.  Les
utilisateurs sont donc invités à charger  et  tester  l'adéquation  du
logiciel à leurs besoins dans des conditions permettant d'assurer la
sécurité de leurs systèmes et ou de leurs données et, plus généralement,
à l'utiliser et l'exploiter dans les mêmes conditions de sécurité.

Le fait que vous puissiez accéder à cet en-tête signifie que vous avez
pris connaissance de la licence CeCILL et que vous en avez accepté les
**/
#include "fenetrevisualisation.h"
#include "ui_fenetrevisualisation.h"
#include "QMessageBox"

FenetreVisualisation::FenetreVisualisation(Ecran *ecran,QWidget *parent) :
    QDialog(parent),
    ui(new Ui::FenetreVisualisation)
{
    ui->setupUi(this);
    this->setWindowIcon((QIcon("Icone/logo_vcs_transparent.png")));
     _ecran=ecran;
     connect(ui->pushAjouter,SIGNAL(clicked()),this,SLOT(Ajouter()));
     connect(ui->pushButton_Supprimer,SIGNAL(clicked()),this,SLOT(Supprimer()));
     connect(ui->pushButton_Annuler,SIGNAL(clicked()),this,SLOT(close()));

    Initialisation();
}
void FenetreVisualisation::Initialisation()
{
     ui->comboBox->clear();
QList <Equipe*> ListEquipe=_ecran->GetListeEquipe();
    for(int i=0;i<ListEquipe.count();i++)
    {
           ui->comboBox->addItem(ListEquipe.at(i)->GetNom());
    }

}

FenetreVisualisation::~FenetreVisualisation()
{
    delete ui;
}
void FenetreVisualisation::Ajouter()
{

    for(int i=0;i<_ecran->GetListeEquipe ().size ();i++)
    {
        if(_ecran->GetListeEquipe ().at (i)->GetNom ()==ui->lineEdit->text())
        {
            QMessageBox::warning (this,tr("Attention"),tr("Equipe déjà presente"));
            return ;
        }
    }

    Equipe * Team=new Equipe(ui->lineEdit->text());
    _ecran->AddEquipe(Team);
    ui->lineEdit->setText("");
    Initialisation();

}
void FenetreVisualisation::Supprimer()
{
    QList <Equipe*> ListEquipe=_ecran->GetListeEquipe();
    for(int i=0;i<ListEquipe.count();i++)
    {
        if(ListEquipe.at(i)->GetNom()==ui->comboBox->currentText())
        {
            _ecran->SupEquipe(ListEquipe.at(i));
            break;
        }
    }
    ui->comboBox->clear();
    Initialisation();
}
